trying to fix mobile issues

--- a/map/map.html
+++ b/map/map.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>NH 4000 Footers Map</title>
     <link rel="stylesheet" href="map.css">
 </head>
@@ -12,7 +12,7 @@
             <button id="zoom-in" class="control-btn">🔍+</button>
             <button id="zoom-out" class="control-btn">🔍-</button>
             <button id="reset-zoom" class="control-btn">🏠</button>
-            <button id="add-mountain" class="control-btn">➕</button>
+            <!-- <button id="add-mountain" class="control-btn">➕</button> -->
         </div>
         
         <div class="map-wrapper">
@@ -27,7 +27,7 @@
             <h3>Mountain Info</h3>
             <div id="mountain-info">
                 <p>Click on mountain pins to view details and manage hikes</p>
-                <p>Double-click (desktop) or long-press (mobile) on empty areas to add new mountains</p>
+                <p>Double-click (desktop) on empty areas to add new mountains</p>
                 <p>Use the map controls to zoom and pan</p>
             </div>
         </div>
