using db storage

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <h1>🏔️ NH 4000 Footers</h1>
         <p class="subtitle">Track your adventures on New Hampshire's highest peaks</p>
         
+        <a href="setup-token.html" class="map-link">🔑 Setup GitHub Token</a>
         <a href="map/map.html" class="map-link">🗺️ View Interactive Map</a>
         
         <div class="stats">
