--- a/map/map.html
+++ b/map/map.html
@@ -91,6 +91,7 @@
         </div>
     </div>
 
+    <script src="../data/github-storage.js"></script>
     <script type="module" src="map.js"></script>
 </body>
 </html> 
