adding publish button

--- a/map/map.html
+++ b/map/map.html
@@ -12,6 +12,7 @@
             <button id="zoom-in" class="control-btn">🔍+</button>
             <button id="zoom-out" class="control-btn">🔍-</button>
             <button id="reset-zoom" class="control-btn">🏠</button>
+            <button id="publish-changes" class="control-btn publish-btn" title="Publish changes to GitHub">📤</button>
             <!-- <button id="add-mountain" class="control-btn">➕</button> -->
         </div>
         
