reverting multiple hike submission

--- a/map/map.html
+++ b/map/map.html
@@ -42,10 +42,8 @@
             
             <form id="hike-form">
                 <div class="form-group">
-                    <label for="mountains-input">Mountains:</label>
-                    <input type="text" id="mountains-input" required placeholder="Enter mountain names (comma-separated)">
-                    <div id="mountains-autocomplete" class="autocomplete-dropdown"></div>
-                    <small>Enter mountain names separated by commas. Only existing mountains will be included.</small>
+                    <label for="mountain-name">Mountain Name:</label>
+                    <input type="text" id="mountain-name" required>
                 </div>
                 
                 <div class="form-group">
