adding hike tracker

--- a/map/map.html
+++ b/map/map.html
@@ -23,6 +23,26 @@
             </div>
         </div>
         
+        <div id="hike-tracker">
+            <button id="close-tracker">×</button>
+            <div class="tracker-header">
+                <h3>NH 4000 Footers</h3>
+            </div>
+            <div class="tracker-stats">
+                <div class="stat-item">
+                    <span class="stat-label">Completed:</span>
+                    <span id="completed-count">0</span>
+                    <span class="stat-divider">/</span>
+                    <span class="stat-total">48</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-label">Total Elevation:</span>
+                    <span id="total-elevation">0</span>
+                    <span class="stat-unit">ft</span>
+                </div>
+            </div>
+        </div>
+        
         <div id="info-panel" class="info-panel" style="display: none;">
             <button id="close-panel" class="close-panel">×</button>
             <h3>Mountain Info</h3>
